apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: audiobookshelf-data-claim
      securityContext:
        runAsUser: 1337
        runAsGroup: 1337
      containers:
      - name: app
        image: ghcr.io/advplyr/audiobookshelf:latest@sha256:581d68b2a6fc7ebf58d81c878a9f387cbbc0d88ac9d37b298b9cee10168af85b
        volumeMounts:
        - name: data
          mountPath: /config
          subPath: config
        - name: data
          mountPath: /metadata
          subPath: metadata
        - name: data
          mountPath: /audiobooks
          subPath: audiobooks
        - name: data
          mountPath: /podcasts
          subPath: podcasts
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /healthcheck
            port: 80
          failureThreshold: 12  # 12 * 10s = 2 minutes startup leeway
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
