apps/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - abs.psquid.net
    secretName: psquid-net-tls
  rules:
  - host: abs.psquid.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf-web
            port:
              number: 80
